--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+# Database
+spring.datasource.url = jdbc:mariadb://localhost:3306/storage?useSSL=false&characterEncoding=utf8
+spring.datasource.username = root
+spring.datasource.password = admin
+spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
+spring.datasource.hikari.maximumPoolSize = 3
+
