--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8080
 # Database
 spring.datasource.url = jdbc:mariadb://localhost:3306/carcassonne?useSSL=false&characterEncoding=utf8
 spring.datasource.username = root
