подтверждение по почте

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password = admin
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.datasource.hikari.maximumPoolSize = 3
 
+# SMTP Mail
+spring.mail.host=localhost
+spring.mail.port=5225
+spring.mail.username=
+spring.mail.password=
+spring.mail.protocol=smtp
+spring.mail.defaultEncoding=UTF-8
